# duckranges

./: LICENSE  README.md  pyproject.toml
src/duckranges/: __init__.py
src/duckranges/core/: __init__.py  interval_df.py
src/duckranges/utils/: __init__.py  validation.py
